# puzzelbox

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  Doxyfile  lazy.mk  makefile  readme.md
client/: CMakeLists.txt  cmd.cpp  cmd.h  i2c.cpp  i2c.h  main.cpp  makefile  mod.c  parse.cpp  parse.h  pbc  pbc.1  readme.md  rl.c  rl.cpp  rl.h  sock.cpp  sock.h  xxd.c  xxd.h
docs/: .gitignore  Gemfile  design.adoc  doxygen-layout.xml  fat.adoc  figs.drawio  font.mk  handover.adoc  makefile  plan.adoc  readme.md  reqs.adoc  requirements.adoc  research.adoc  theme.yml
docs/.bundle/: config
docs/img/: .gitignore  busmaster-sequence.puml  sequence-puzzle-module-init.puml  software-components.puml  style.ipuml  theme.ipuml
docs/plugin/: helloworld.rb
docs/share/: footer.adoc  glossary.adoc  meta.adoc  references.adoc  refs.bib
i2ctcp/: i2ctcpv1.c  i2ctcpv1.h  include.cmake
lib/i2ctcp/: CMakeLists.txt  i2ctcpv1.c  i2ctcpv1.h  makefile  readme.md
lib/mpack/: CMakeLists.txt  makefile  mpack.h  read-remaining.c
lib/pbdrv/: CMakeLists.txt  index.dox  makefile  mpack-config.h  pb-buf.c  pb-buf.h  pb-mem.c  pb-mem.h  pb-mod.c  pb-mod.h  pb-msg.c  pb-msg.h  pb-read.c  pb-read.h  pb-route.c  pb-route.h  pb-send.c  pb-send.h  pb-serial.c  pb-serial.h  pb-types.h  pb-write.c  pb-write.h  pb.h  spec.adoc
lib/pbdrv/drv/: index.dox
lib/pbdrv/drv/arduino/: cfg.cmake  include.cmake  index.dox  mod.cpp  mod.h
lib/pbdrv/drv/rp2040/: cfg.cmake  include.cmake  index.dox  mod.c  mod.h  pb-mod.h
lib/pbdrv/ext/: index.dox
lib/pbdrv/ext/freertos/: include.cmake  index.dox  pb-mem.c  pb-mod.c
lib/pbdrv/ext/stdlib/: include.cmake  index.dox  pb-mem.c
lib/pbdrv/mod/: main.h
lib/pbdrv/mod/main/: mod.h
main/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  blink.c  blink.h  config.def.h  i2c.c  i2c.h  index.dox  init.c  init.cpp  init.h  lwipopts.h  main.c  main.cpp  makefile  mod.c  pbdrv.c  pbdrv.h  readme.md  sock.c  sock.h  tasks.c  tasks.h
main/puzzle/fsm/: FSM.h
main/puzzle/hardware/: main.c
main/puzzle/neo/arduino-neopuzzle/: arduino-neopuzzle.ino
main/puzzle/neo/esp-neopuzzle/: CMakeLists.txt
main/puzzle/neo/esp-neopuzzle/main/: main.c
main/puzzle/software/: CMakeLists.txt
main/puzzle/software/main/: main.c
main/puzzle/vault/arduino-vaultpuzzle/: arduino-vaultpuzzle.ino
main/puzzle/vault/esp-vaultpuzzle/: CMakeLists.txt
main/puzzle/vault/esp-vaultpuzzle/main/: main.c
proto/: include.cmake  makefile  puzbusv1.c  puzbusv1.h  puzbusv1.proto
puzzle/: readme.md  spec.adoc
puzzle/dummy/: CMakeLists.txt  FreeRTOSConfig.h  index.dox  main.cpp  makefile  mod.c
puzzle/neo/: CMakeLists.txt  FreeRTOSConfig.h  index.dox  main.cpp  makefile  mod.c
puzzle/neo/arduino-neopuzzle/: arduino-neopuzzle.ino
puzzle/neo/console-neopuzzle/: neo.cpp
puzzle/smoketest/: CMakeLists.txt  FreeRTOSConfig.h  index.dox  main.cpp  makefile  mod.c
puzzle/vault/: CMakeLists.txt  FreeRTOSConfig.h  arduino-vaultpuzzle.cpp  index.dox  main.cpp  makefile  mod.c
puzzle/vault/arduino-vaultpuzzle/: arduino-vaultpuzzle.ino
puzzle/vault/console-vaultpuzzle/: vault.cpp
shared/: FSM.cpp  FSM.h  FSM.hpp  IBehaviouralState.hpp  busaddr.h  include.cmake  pb.cmake  puzbus.h
shared/pb/: bus.h  driver.c  driver.h  moddrv.c  moddrv.h  spec.adoc  types.h
shared/pb/drv/arduino/: mod.h
shared/pb/mod/: main.h
test/: CMakeLists.txt  ExampleTest.cpp  makefile
test/i2ctcp/: main.cpp
test/pbdrv/: cmd.cpp  main.cpp  mem.cpp  mod.c  msg.cpp  msg.h  pb-route.c  read.cpp  send.cpp  test.h  write.cpp
